Fixing template error

--- a/templates/default/tunnels.erb
+++ b/templates/default/tunnels.erb
@@ -6,6 +6,6 @@
 #TYPE           ZONE    GATEWAY
 #                                                                 PORT      PORT(S)             DEST              LIMIT         GROUP
 
-<%= node[:shorewall][:tunnels].each do |tunnel| -%>
+<% node[:shorewall][:tunnels].each do |tunnel| -%>
 <%= tunnel %>
 <% end -%>
