fix typo, close #1

--- a/templates/default/shorewall.conf.erb
+++ b/templates/default/shorewall.conf.erb
@@ -107,7 +107,7 @@ RSH_COMMAND='ssh ${root}@${system} ${command}'
 ###############################################################################
 #     F I R E W A L L   O P T I O N S
 ###############################################################################
-CCOUNTING=Yes
+ACCOUNTING=Yes
 
 ACCOUNTING_TABLE=filter
 
